# IndoorShufflebotSwarm

./: LICENSE  README.md
ShuffleBot/: Config.hh  Esp32UDPReader.hh  Esp32UDPWriter.hh  ShuffleBot.ino  saveconfig.sh
ShuffleServer/: CMakeLists.txt  ShuffleServer.cc  ShuffleServer.hh  shuttleservermain.cc
msg_example/: CMakeLists.txt  how_to_build.txt  msgexample.cc
msgs/: MessageInterface.hh  MessageSerializer.hh  MessageType.hh  SpeedCurvCommand.hh  Telemetry.hh  TelemetryRequest.hh  TimeSync.hh
shufflebot/client/: .gitignore  WifiMessenger.hh  buildandupload.sh  client.ino  config.hh  help.txt  saveconfig.sh
